============================== next release ==============================
  new data
    other/human body/blood/Rowe.yml (thanks to David Rowe, University of Southampton, UK, for providing numerical data!)
  updates
    other/human body/liver/Giannios.yml: references
  bug fixes
    added a new line at the end of each file (thanks to Thibault North!)

============================== 2017-09-05 ==============================
  
  new data
    main/Ag/Wu.yml  (thanks to Yanwen Wu, University of Texas at Austin, TX, USA!)
    other/perovskite/CH3NH3PbI3/Ball.yml (thanks to Sam Stranks, University of Cambridge, UK!)
    other/intermetallics/AuAl2/Supansomboon.yml (thans to Telmo for submitting data in YAML format!)
  new data (thanks to Tobias König for submitting data!)
    organic/(C2H4O)n - polyvinyl alcohol/Schnepf.yml
    main/ZnO/Stelling.yml
    main/MoO3/Stelling.yml
    other/mixed organic/PTB7-PC71BM/Stelling.yml
    other/mixed organic/P3HT-PC61BM/Stelling.yml
  new data (thanks to Ke Wang, Shenzhen University, China, for submitting data!)
    organic/C3H8O3 - glycerol/Wang.yml
    main/H2O/Wang.yml
    main/D2O/Wang.yml
    other/immersion oils/Leica Type F/Wang.yml
    other/immersion oils/Olympus IMMOIL-F30CC/Wang.yml
    other/immersion oils/Sigma Aldrich M5904/Wang.yml
  new data (thanks to Mattias "MK8J", for submitting data in YAML format via GitHub!)
    main/Si/Daub.yml
    main/Si/Green-2008.yml
    main/Si/Schinke.yml
    main/Si/Sik-25C.yml
    main/Si/Sik-250C.yml
    main/Si/Sik-500C.yml
    main/Si/Sik-700C.yml
    main/Si/Sik-850C.yml
  new data
    main/GaP/Adachi.yml
    main/GaAs/Adachi.yml
    main/GaSb/Adachi.yml
    main/InP/Adachi.yml
    main/InAs/Adachi.yml
    main/InSb/Adachi.yml
    other/semiconductor alloys/AlAs-GaAs/Adachi-0.315.yml
    other/semiconductor alloys/AlAs-GaAs/Adachi-0.315.yml
    other/semiconductor alloys/GaAs-InAs/Adachi.yml
    other/semiconductor alloys/GaAs-InAs-GaP-InP/Adachi.yml
    main/ZnTe/Sato.yml