@@ -1,0 +1,10 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "G. Perotto, Y. Zhang, D. Naskar, N. Patel, D. L. Kaplan, S. C. Kundu, F. G. Omenetto. The optical properties of regenerated silk fibroin films obtained from different sources, <a href=\"https://doi.org/10.1063/1.4998950\"><i>Appl. Phys. Lett.</i> <b>111</b>, 103702 (2017)</a>"
+COMMENTS: "Antheraea mylitta fibroin film"
+DATA:
+  - type: formula 5
+    range: 0.3 1.7
+    coefficients: 1.5204 0.0036 -2 2.9e-4 -4
